# GuardianLayer

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  choses.md  conftest.py  pyproject.toml  ruff_errors.json  ruff_errors.txt  test_async.db-shm  test_async.db-wal  test_async_v2.db-shm  test_async_v2.db-wal
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  index.rst  troubleshooting.rst
src/: LoopDetector.py  __init__.py  advice_generator.py  cache.py  config.py  experience_layer.py  guardian.py  health_monitor.py  interfaces.py  logging_config.py  mcp_facade.py  metrics.py  providers.py
src/GuardianLayer/: __init__.py  __main__.py  advice_generator.py  experience_layer.py  guardian.py  health_monitor.py  logging_config.py  mcp_facade.py  server.py
src/GuardianLayer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: benchmark.py  test_advanced.py  test_async.py  test_async_flow.py  test_basics.py  test_cache.py  test_concurrency.py  test_custom_provider.py  test_experience.py  test_guardian.py  test_health_monitor.py  test_loop_detector.py  test_metrics.py
