[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "GuardianLayer"
version = "2.0.0"
description = "Prevent infinite loops for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Michael" }
]
keywords = ["ai", "loop", "guardian", "meta-cognition", "agent"]
requires-python = ">=3.8"
dependencies = [
  "aiosqlite>=0.19.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/GuardianLayer"
"Repository" = "https://github.com/your-org/GuardianLayer"
"Issue Tracker" = "https://github.com/your-org/GuardianLayer/issues"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "structlog>=22.0.0",
  "sphinx>=5.0.0",
  "sphinx-rtd-theme>=1.2.0",
  "pre-commit>=2.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.metadata]
# Additional metadata for tools that may read it.
license-file = "LICENSE"

# Optional: configuration for build tools or linters can be added below.
# For example, flake8, mypy, or tool-specific blocks.
